--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DocPlanner - Trouver un Médecin</title>
+  <title>DocPlanner</title>
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -39,7 +39,7 @@
   <!-- Section small presentation -->
   <div class="container">
     <img src="./Img/sygnet@2x.png" alt="">
-    <h1 style="align-items: center;">Making the healthcare experience more human</h1>
+    <h1 class="p-3">Making the healthcare experience more human</h1>
   </div>
   <div class="container">
     <div class="row">
@@ -47,7 +47,6 @@
         <div class="col">We also help doctors to better manage their practice and build their online reputation. With our integrated end-to-end solution, doctors are able not only to improve their online presence, but also to devote their time to what really matters: their patients.</div>
     </div>
   </div>
-
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
